# Tessa-tech-backend

./: .env.dev  .env.example  .env.staging  .gitignore  pyproject.toml  render.yaml  requirements.txt  terra.db
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: b6ab579031a8_add_priority_column_to_tickets.py  cb7e153e7cae_initial_schema.py
src/: main.py  terra.db  tessa.db
src/AI/: agent.py
src/admin/: admin_route.py
src/authentication/: Oauth2.py  auth.py  token.py
src/db/: database.py  db_email.py  db_message.py  db_ticket.py  db_user.py
src/models/: __init__.py  message.py  otps.py  pending_users.py  status.py  ticket.py  user.py
src/routers/: ticket.py  user.py
src/schemas/: agent.py  message.py  status.py  ticket.py  user.py
src/templates/emails/: agentinvite.html  verify.html  welcome.html
src/tests/: test.py  test_main.py
src/utils/: config.py  email.py  hash.py  otp.py  redis_client.py
